--- a/Views/MeasurmentEntities/Delete.cshtml
+++ b/Views/MeasurmentEntities/Delete.cshtml
@@ -1,4 +1,5 @@
 ﻿@model WebApplication3.Models.ViewModel.MeasurementVm
+
 @{
     ViewData["Title"] = "Delete";
 }
@@ -7,6 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
+    <h4>Measurement</h4>
     <hr />
     <div>
         <dl class="row">
@@ -50,10 +52,9 @@
                 </dd>
             }
         </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-    </form>
-</div>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a class="btn btn-secondary" asp-action="Details">Back</a>
+        </form>
+    </div>
