--- a/Views/MeasurmentEntities/Create.cshtml
+++ b/Views/MeasurmentEntities/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-<h1 class="mr-3">Create new measurement</h1>
+<h1 class="mr-3"><b>Create new measurement</b></h1>
 <form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="MeasurementName"></label>
