--- a/Views/DeviceEntities/Index.cshtml
+++ b/Views/DeviceEntities/Index.cshtml
@@ -25,14 +25,14 @@
 @if (devicesCount < 5 && devicesCount!=4)
     {
     <div class="d-flex justify-content-between align-items-center">
-        <h1 class="mr-3">Devices</h1>
+        <h1 class="mr-3"><b>Devices</b></h1>
         <div class="flex-grow-1"></div>
         <a class="btn btn-primary" asp-action="Create">Create New</a>
     </div>
     }
 else if (devicesCount != 4)
     {
-    <h1 class="mr-3">Devices</h1>
+    <h1 class="mr-3"><b>Devices</b></h1>
     <div class="alert alert-danger" role="alert">
         You can only add one more device
     </div>
