--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,56 +23,71 @@
                 <div style="width: 900px; margin: auto;">
                     @{
                         var measurementName = "Weight";
-                        var measurementData = Model.Where(m => m.MeasurementName.ToString() == measurementName).OrderBy(m => m.TreatmentTime.Date).ToList();
-
-                        var xValues = measurementData.Select(m => m.TreatmentTime.Date.ToString("yyyy-MM-dd")).Distinct().OrderBy(d => d).ToList();
-
+                        List<MeasurementVm> measurementData = null;
+                        var modelHasData = Model != null && Model.Any();
+                        if (modelHasData)
+                        {
+                            measurementData = Model.Where(m => m.MeasurementName.ToString() == measurementName)
+                            .OrderBy(m => m.TreatmentTime.Date)
+                            .ToList();
+                        }
+                        var xValues = measurementData?.Select(m => m.TreatmentTime.Date.ToString("yyyy-MM-dd"))
+                        .Distinct()
+                        .OrderBy(d => d)
+                        .ToList();
                         var randomColor = String.Format("#{0:X6}", random.Next(0x1000000));
                     }
 
-                    <h3><strong>@measurementName @measurementUnits[measurementName]</strong></h3>
-                    <canvas id="@("myChart_" + measurementName)" style="width:100%;max-width:800px"></canvas>
-                </div>
+                    @if (modelHasData && measurementData.Any())
+                    {
+                        <h3><strong>@measurementName @measurementUnits[measurementName]</strong></h3>
+                        <canvas id="@("myChart_" + measurementName)" style="width:100%;max-width:800px"></canvas>
 
-                <script>
-                    var xValues_@measurementName = @Html.Raw(Json.Serialize(xValues));
+                        <script>
+                            var xValues_@measurementName = @Html.Raw(Json.Serialize(xValues));
 
-                    var chartData_@measurementName = {
-                    labels: xValues_@measurementName,
-                    datasets: [{
-                    label: '@measurementName',
-                    data: @Html.Raw(Json.Serialize(measurementData.Select(m => m.Value ?? 0))),
-                    borderColor: '@randomColor',
-                    fill: false
-                    }]
-                    };
+                            var chartData_@measurementName = {
+                                labels: xValues_@measurementName,
+                                    datasets: [{
+                                        label: '@measurementName',
+                                        data: @Html.Raw(Json.Serialize(measurementData.Select(m => m.Value ?? 0))),
+                                        borderColor: '@randomColor',
+                                        fill: false
+                                    }]
+                            };
 
-                    new Chart("@("myChart_" + measurementName)", {
-                    type: "line",
-                    data: chartData_@measurementName,
-                    options: {
-                    legend: { display: true },
-                    scales: {
-                    x: {
-                    display: true,
-                    title: {
-                    display: true,
-                    text: 'Treatment Date'
+                            new Chart("@("myChart_" + measurementName)", {
+                                type: "line",
+                                data: chartData_@measurementName,
+                                options: {
+                                legend: { display: true },
+                                scales: {
+                                    x: {
+                                        display: true,
+                                        title: {
+                                            display: true,
+                                            text: 'Treatment Date'
+                                        }
+                                    },
+                                    y: {
+                                        display: true,
+                                        title: {
+                                            display: true,
+                                            text: 'Value'
+                                        }
+                                    }
+                                }
+                            }
+                                                    });
+                        </script>
                     }
-                    },
-                    y: {
-                    display: true,
-                    title: {
-                    display: true,
-                    text: 'Value'
+                    else
+                    {
+                        <p>No measurements available for @measurementName</p>
                     }
-                    }
-                    }
-                    }
-                    });
-                </script>
             </div>
         </div>
+    </div>
         <!--Profile Zone-->
         <div class="row">
             <div class="col-md-4">
@@ -85,17 +100,18 @@
             </div>
             <!--BMI Zone-->
             <div class="col-md-4">
-                <div class="my-2 text-white text-center square" style="background-color:rgba(112, 128, 144, 0.7); ">
+                <div class="my-2 text-white text-center square" style="background-color:rgba(112, 128, 144, 0.7);">
                     @{
                         var weightMeasurement = Model
-                        .Where(m => m.MeasurementName.ToString() == "Weight")
+                        ?.Where(m => m.MeasurementName.ToString() == "Weight")
                         .OrderByDescending(m => m.TreatmentTime)
                         .FirstOrDefault();
 
                         var heightMeasurement = Model
-                        .Where(m => m.MeasurementName.ToString() == "Height")
+                        ?.Where(m => m.MeasurementName.ToString() == "Height")
                         .OrderByDescending(m => m.TreatmentTime)
                         .FirstOrDefault();
+
                         double weight = weightMeasurement?.Value ?? 0;
                         double height = heightMeasurement?.Value ?? 0;
 
@@ -118,7 +134,6 @@
                                     bmiBorder = "#70AFD4";
                                     break;
                                 case "Normal weight":
-
                                     bgColor = "#90EE90";
                                     bmiCategoryDescription = "Normal weight";
                                     bmiBorder = "#55C951";
@@ -160,13 +175,11 @@
                                     </div>
                                 </div>
 
-
                                 <div style="text-align: left; margin-left: 20px;">
                                     <p><b>Weight: @weight kg</b></p>
                                     <p><b>Height: @height cm</b></p>
                                 </div>
                             </div>
-
                         }
                         else
                         {
@@ -190,7 +203,7 @@
             <div class="col-md-4">
                 <div class="my-2 text-white text-left square" style="background-color: rgba(112, 128, 144, 0.7); padding-left: 20px; padding-top: 20px;">
                     @{
-                        var pulseMeasurements = Model.Where(m => m.MeasurementName.ToString() == "Pulse")
+                        var pulseMeasurements = Model?.Where(m => m.MeasurementName.ToString() == "Pulse")
                         .OrderByDescending(m => m.TreatmentTime)
                         .FirstOrDefault();
 
@@ -223,7 +236,7 @@
 
                                 // Additional information for the norm
                                 <div class="text-center" style="background-color: #DFF0D8; border: 1px solid #3C763D; padding: 10px; border-radius: 5px; margin-right:15px;">
-                                    <p style="color: #3C763D; font-weight: bold;">Your pulse is good.</p>
+                                    <p style="color: #3C763D;">Your pulse is good.</p>
                                 </div>
 
 
